--- a/simple/src/main/res/values/strings.xml
+++ b/simple/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">simple</string>
+    <string name="app_name">FastImgSearch</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_webview">Webview</string>
 </resources>
