Search picture through "send";added "change engine" in browser;UI updated.

--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_engine">Change Engine</string>
     <string name="action_clearcache">Clear Cache</string>
     <string name="title_activity_webview">Webview</string>
     <string name="LAsite">http://android.silenceender.com/upload.php</string>
